# matrixlib

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
.github/workflows/: cmake.yml
doc/: mainpage.md
example/: example.cpp
include/: matrixLib.hpp  utils.h
test/: test_matrixLib.cpp
